<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="397dp">


    <RadioGroup
        android:id="@+id/radioGroup_loc"
        android:layout_width="250dp"
        android:layout_height="230dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="300dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableLayout
            android:layout_width="250dp"
            android:layout_height="230dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/btn1"
                    android:layout_width="57dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_1_text" />

                <RadioButton
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_2_text" />

                <RadioButton
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_3_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_4_text" />

                <RadioButton
                    android:id="@+id/btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_5_text" />

                <RadioButton
                    android:id="@+id/btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_6_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_7_text" />

                <RadioButton
                    android:id="@+id/btn8"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_8_text" />

                <RadioButton
                    android:id="@+id/btn9"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_9_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/btn10"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_10_text" />

                <RadioButton
                    android:id="@+id/btn11"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_11_text" />

                <RadioButton
                    android:id="@+id/btn12"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_12_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/btn13"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_13_text" />

                <RadioButton
                    android:id="@+id/btn14"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_14_text" />

                <RadioButton
                    android:id="@+id/btn15"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_15_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/btn16"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_16_text" />

                <RadioButton
                    android:id="@+id/btn17"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_17_text" />

                <RadioButton
                    android:id="@+id/btn18"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/filter_loc_18_text" />
            </TableRow>
        </TableLayout>


    </RadioGroup>

    <TextView
        android:id="@+id/logo_loc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="355dp"
        android:text="지역"
        android:textColor="@color/black_900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/logo_part2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="355dp"
        android:text="분야"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="124dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="323dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="36dp"
        android:background="@color/black_100"
        android:fontFamily="@font/pretendard_regular"
        android:text="초기화"
        android:textColor="@color/black_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />

    <Button
        android:id="@+id/btn_select"
        android:layout_width="172dp"
        android:layout_height="38dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="323dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:background="#09D687"
        android:fontFamily="@font/pretendard_regular"
        android:text="적용하기"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />

</androidx.constraintlayout.widget.ConstraintLayout>