<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewProjectActivity">

    <!-- Toolbar -->
    <include
        android:id="@+id/toolbar_title"
        layout="@layout/toolbar_add_page"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_title"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/add_page_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textSize="16sp"
                android:hint="@string/add_new_title"/>

            <EditText
                android:id="@+id/add_page_des"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                app:layout_constraintTop_toBottomOf="@id/add_page_title"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textSize="14sp"
                android:hint="@string/add_new_des"/>

            <TextView
                android:id="@+id/add_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/add_page_des"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="30dp"
                android:text="@string/add_image_text"
                android:textColor="@color/black"
                android:textSize="11sp"/>


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/image_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/add_image_text"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="24dp"
                />

            <TextView
                android:id="@+id/add_part_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/image_divider"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="24dp"
                android:text="@string/add_part_text"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"






        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>