<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addpage.AddPfPageActivity">
    <!-- Toolbar -->
    <include
        android:id="@+id/toolbar_title"
        layout="@layout/toolbar_add_page"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_title"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            >

            <TextView
                android:id="@+id/text_pf_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="21dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="4dp"
                android:text="@string/add_pf_title_text"
                android:textColor="@color/black_900"
                style="@style/Text.Body4.SemiBold"/>

            <include
                android:id="@+id/input_pf_title"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                layout="@layout/input_layout"
                app:layout_constraintTop_toBottomOf="@id/text_pf_title"
                android:layout_marginTop="12dp"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/title_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/input_pf_title"
                android:layout_marginTop="24dp"/>

            <TextView
                android:id="@+id/text_pf_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_divider"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="4dp"
                android:text="@string/pf_name_text"
                android:textColor="@color/black_900"
                style="@style/Text.Body4.SemiBold"/>

            <include
                android:id="@+id/input_pf_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                layout="@layout/input_layout"
                app:layout_constraintTop_toBottomOf="@id/text_pf_name"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/text_pf_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/input_pf_name"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="4dp"
                android:text="@string/pf_birthday_text"
                android:textColor="@color/black_900"
                style="@style/Text.Body4.SemiBold"/>

            <include
                android:id="@+id/input_pf_birthday"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                layout="@layout/input_layout"
                app:layout_constraintTop_toBottomOf="@id/text_pf_birthday"
                android:layout_marginTop="12dp"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/birthday_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/input_pf_birthday"
                android:layout_marginTop="24dp"/>

            <TextView
                android:id="@+id/text_pf_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/birthday_divider"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="4dp"
                android:text="@string/pf_level_text"
                android:textColor="@color/black_900"
                style="@style/Text.Body4.SemiBold"/>

            <include
                android:id="@+id/input_pf_level"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                layout="@layout/dropdown_layout"
                app:layout_constraintTop_toBottomOf="@id/text_pf_level"
                android:layout_marginTop="12dp"/>

            <LinearLayout
                android:id="@+id/level_section"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/input_pf_level"
                android:layout_marginTop="-8dp"
                android:orientation="vertical"/>

            <TextView
                android:id="@+id/stack_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/level_section"
                android:layout_marginTop="32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="4dp"
                android:text="@string/pf_stack_text"
                android:textColor="@color/black_900"
                style="@style/Text.Body4.SemiBold"
                />


            <include
                android:id="@+id/stack_dropdown"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                layout="@layout/dropdown_layout"
                app:layout_constraintTop_toBottomOf="@id/stack_text"
                android:layout_marginTop="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <LinearLayout
                android:id="@+id/stack_1_section"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/stack_dropdown"
                android:layout_marginTop="-5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="vertical"/>


            <include
                android:id="@+id/stack_dropdown2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                layout="@layout/dropdown_layout"
                app:layout_constraintTop_toBottomOf="@id/stack_1_section"
                android:layout_marginTop="13dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <LinearLayout
                android:id="@+id/stack_2_section"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/stack_dropdown2"
                android:layout_marginTop="-8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="vertical">
            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/stack_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/stack_2_section"
                android:layout_marginTop="12dp"
                />

            <TextView
                android:id="@+id/text_pf_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/stack_chip_group"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="4dp"
                android:text="@string/pf_intro_text"
                android:textColor="@color/black_900"
                style="@style/Text.Body4.SemiBold"/>

            <include
                android:id="@+id/input_pf_intro"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                layout="@layout/input_layout"
                app:layout_constraintTop_toBottomOf="@id/text_pf_intro"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/text_pf_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/input_pf_intro"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="4dp"
                android:text="@string/pf_content_text"
                android:textColor="@color/black_900"
                style="@style/Text.Body4.SemiBold"/>

            <EditText
                android:id="@+id/input_pf_content"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                app:layout_constraintTop_toBottomOf="@id/text_pf_content"
                android:layout_marginTop="12dp"
                android:textSize="14sp"
                android:hint="@string/pf_content_hint"/>


            <TextView
                android:id="@+id/text_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="@id/input_pf_content"
                android:layout_marginEnd="12dp"
                app:layout_constraintBottom_toBottomOf="@id/input_pf_content"
                android:layout_marginBottom="18dp"
                android:text="1/100"/>

            <TextView
                android:id="@+id/text_pf_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/input_pf_content"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="4dp"
                android:text="@string/pf_link_text"
                android:textColor="@color/black_900"
                style="@style/Text.Body4.SemiBold"/>

            <LinearLayout
                android:id="@+id/link_section"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/text_pf_link"
                android:layout_marginTop="12dp"
                android:orientation="vertical"/>

            <Button
                android:id="@+id/add_link_button"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                app:layout_constraintTop_toBottomOf="@id/link_section"
                android:layout_marginTop="12dp"
                android:text="@string/pf_add_link_text"
                android:background="@drawable/write_gray_button"
                style="@style/Text.Body4.SemiBold"
                android:textColor="@color/black_700"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                app:layout_constraintTop_toBottomOf="@id/add_link_button"
                android:layout_marginTop="52dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="12dp"
                android:text="@string/pf_submit_button_text"
                android:background="@drawable/write_button"
                style="@style/Text.Body4.SemiBold"
                android:textColor="#ffffff"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


  </androidx.constraintlayout.widget.ConstraintLayout>